@@ -1,5 +1,7 @@
 package br.com.tt.petshop.service;
 
+import br.com.tt.petshop.dto.ClienteEntradaDto;
+import br.com.tt.petshop.dto.ClienteSaidaDto;
 import br.com.tt.petshop.exception.CpfInvalidoException;
 import br.com.tt.petshop.model.Cliente;
 import br.com.tt.petshop.repository.ClienteRepository;
@@ -8,7 +10,6 @@ import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.mockito.Mockito;
 
-import java.util.Arrays;
 import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.*;
@@ -24,23 +25,23 @@ class ClienteServiceTest {
     void inicializacao(){
         clientRepositoryMock = Mockito.mock(ClienteRepository.class);
         cpfValidatorMock = Mockito.mock(CpfValidator.class);
-        clienteService = new ClienteService(clientRepositoryMock, cpfValidatorMock);
+        clienteService = new ClienteService(clientRepositoryMock, cpfValidatorMock, creditoClient);
     }
 
     @Test
     void deveriaListarUsandoORepository(){
 
         //Preparação
-        List<Cliente> listaClientes = Arrays.asList(new Cliente("Gilberto", "911.948.160-88"));
-        Mockito.when(clientRepositoryMock.listarClientes()).thenReturn(listaClientes);
+        ClienteEntradaDto dto = new ClienteEntradaDto("Gilberto", "911.948.160-88");
+        Mockito.when(clientRepositoryMock.listarClientes()).thenReturn(List.of(new Cliente(dto)));
 
         //Act
-        List<Cliente> clientes = clienteService.listarClientes();
+        List<ClienteSaidaDto> clientes = clienteService.listarClientes();
 
         //Verificação
         assertNotNull(clientes);
 
-        Cliente clienteGilberto = clientes.get(0);
+        ClienteSaidaDto clienteGilberto = clientes.get(0);
         assertEquals("911.948.160-88", clienteGilberto.getCpf());
         assertEquals("Gilberto (911.948.160-88)", clienteGilberto.getDescricao());
         Mockito.verify(clientRepositoryMock).listarClientes();
@@ -49,11 +50,12 @@ class ClienteServiceTest {
     @Test
     void deveriaSalvarComSucesso(){
         //Preparação
-        Cliente clienteASerSalvo = new Cliente("Fulano dos Santos", "CPF_VALIDO");
+        ClienteEntradaDto clienteDtoASerSalvo = new ClienteEntradaDto("Fulano dos Santos", "CPF_VALIDO");
         Mockito.when(cpfValidatorMock.verificaSeCpfValido("CPF_VALIDO")).thenReturn(true);
+        Cliente clienteASerSalvo = new Cliente(clienteDtoASerSalvo);
 
         //Act
-        clienteService.criarCliente(clienteASerSalvo);
+        clienteService.criarCliente(clienteDtoASerSalvo);
 
         //Verificação = 1 chamada = Mockito.times(1)
         Mockito.verify(clientRepositoryMock).criarCliente(clienteASerSalvo);
@@ -62,7 +64,7 @@ class ClienteServiceTest {
     @Test
     void deveriaFalharComCpfInvalido(){
         //Preparação
-        Cliente clienteASerSalvo = new Cliente("Fulano dos Santos", "CPF_INVALIDO");
+        ClienteEntradaDto clienteASerSalvo = new ClienteEntradaDto("Fulano dos Santos", "CPF_INVALIDO");
         Mockito.when(cpfValidatorMock.verificaSeCpfValido("CPF_INVALIDO")).thenReturn(false);
 
         //Act
